--- a/index.html
+++ b/index.html
@@ -91,21 +91,23 @@
             <div class="modal-image" id="imaghe">
                 <img id="modalImg" alt="popup-image" src="m">
             </div>
-            <div class="modal-body">
-                <p class="modal-para" id="modalDesc"></p>
-            </div>
-            <div class="modal-footer">
-                <ul class="mobile-header-lnks card-lang" >
-                    <li>html</li>
-                    <li>css</li>
-                    <li>javascript</li>
-                </ul>
-                <div class="footer-container">
-                    <button class="see-source btn1" id="modalBtn1"> 
-                        See source  
-                        <i class=" fas fa-chart-line"></i>
-                    </button>
-                    <button class="see-live btn1" id="modalBtn2">See live &nbsp; </button>
+            <div class="modal-container">
+                <div class="modal-body">
+                    <p class="modal-para" id="modalDesc"></p>
+                </div>
+                <div class="modal-footer">
+                    <ul class="mobile-header-lnks card-lang" >
+                        <li>html</li>
+                        <li>css</li>
+                        <li>javascript</li>
+                    </ul>
+                    <div class="footer-container">
+                        <button class="see-source btn1" id="modalBtn1"> 
+                            See source  
+                            <i class=" fas fa-chart-line"></i>
+                        </button>
+                        <button class="see-live btn1" id="modalBtn2">See live &nbsp; </button>
+                    </div>
                 </div>
             </div>
         </div>
