--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
     </section>
     <section>
         <form class="contact-form" id="contact-form" action="https://formspree.io/f/mleaokev" method="POST">
-            <input class="contact-input" type="text" name="name-input" placeholder="Enter name here" maxlength="30" required><br>
+            <input class="contact-input" id="username-input" type="text" name="name-input" placeholder="Enter name here" maxlength="30" required><br>
             <input class="contact-input" id="contact-email" type="email" placeholder="Enter email address here" name="email-input" required><br>
-            <textarea class="contact-input" name="textarea-input" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea><br>
+            <textarea class="contact-input" id="user-comment" name="textarea-input" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea><br>
             <small class="inner-font" id="email-error"></small><br>
             <button class="btn3 rty btn1"> Get in touch</button><br>
             
