Add leaderboard app

--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
 
         <section class="card-section work">
             <section class="card-image">
-                <img class="img-card" src="img/SnapshootPortfolio(1).png" alt="first project card">
+                <img class="img-card" src="img/leaderboard.png" alt="first project card">
             </section>
             <section class="card-para">
                 <h2 class="card-header">Tonic</h2>
                 <ul class="card-links">
-                    <li>CANOPY</li>
+                    <li>leaderboard</li>
                     <li> Black End Dev</li>
                     <li>2015</li>
                 </ul>
-                <p class="card-text">A daily selection of privately personalised reads; no accounts or sign-ups required</p>
+                <p class="card-text">A leaderboard app to store scores from the api and show the ranks in realtime</p>
                 <ul class="card-lang">
                     <li>Html</li>
                     <li>JavaScript</li>
                     <li>css</li>
                 </ul>
-                <button data-modal-target="#Mymodal" class="btn1" id="myBtn1" type="button" name="submit">See Project</button>
+                <button data-modal-target="#Mymodal" class="btn1" id="myBtn1" type="button" name="submit"><a href="https://roaring-croissant-89db8c.netlify.app/">See project</a></button>
             </section>
             
         </section>
