Add project live source

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <img class="img-card" src="img/leaderboard.png" alt="first project card">
             </section>
             <section class="card-para">
-                <h2 class="card-header">Tonic</h2>
+                <h2 class="card-header">Leaderboard</h2>
                 <ul class="card-links">
-                    <li>leaderboard</li>
+                    <li>Canopy</li>
                     <li> Black End Dev</li>
                     <li>2015</li>
                 </ul>
