--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <li>JavaScript</li>
                     <li>css</li>
                 </ul>
-                <button data-modal-target="#Mymodal" class="btn1" id="myBtn1" type="button" name="submit"><a href="https://roaring-croissant-89db8c.netlify.app/">See project</a></button>
+                <button data-modal-target="#Mymodal" class="btn1" id="myBtn1" type="button" name="submit">See project</button>
             </section>
             
         </section>
