Add second project

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 
         <section class="card-section work">
             <section class="card-image se">
-                <img class="img-card" src="img/SnapshootPortfolio(2).png" alt="second project">
+                <img class="img-card" src="img/covidapp.png" alt="second project">
             </section>
             <section class="card-para">
-                <h2 class="card-header">Multi-Post<br> Stories</h2>
+                <h2 class="card-header">Corona-virus<br> Statistics App</h2>
                 <ul class="card-links">
                     <li>CANOPY</li>
                     <li> Black End Dev</li>
