--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <section class="card-section work">
             <section class="card-image">
-                <img class="img-card" src="img/SnapshootPortfolio(3).png" alt="third project">
+                <img class="img-card" src="img/doctorapp.png" alt="third project">
             </section>
             <section>
                 <h2 class="card-header">Tonic</h2>
