--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
 
         <section class="card-section work">
             <section class="card-image se">
-                <img class="img-card " src="img/SnapshootPortfolio(4).png" alt="fourth project">
+                <img class="img-card " src="img/bookstore.png" alt="fourth project">
             </section>
             <section>
-                <h2 class="card-header">Multi-Post<br>Stories</h2>
+                <h2 class="card-header">BookStore<br>App</h2>
                 <ul class="card-links">
                     <li>CANOPY</li>
                     <li> Black End Dev</li>
                     <li>2015</li>
                 </ul>
-                <p class="card-text">A daily selection of privately personalised reads; no accounts or sign-ups required</p>
+                <p class="card-text">An app using react amd redux store for CRUD implementations </p>
                 <ul class="card-lang">
                     <li>html</li>
                     <li>css</li>
