Add changes to display

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <img class="img-card" src="img/doctorapp.png" alt="third project">
             </section>
             <section>
-                <h2 class="card-header">Tonic</h2>
+                <h2 class="card-header">Book an Appointment</h2>
                 <ul class="card-links">
                     <li>CANOPY</li>
                     <li> Black End Dev</li>
